<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_articulo"
        android:id="@+id/name_articulo"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_articulo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_articulo"
            android:id="@+id/cantidad_articulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:layout_below="@+id/name_articulo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_articulo_value"
            android:id="@+id/cantidad_articulo_value"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_articulo"
            android:id="@+id/precio_articulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:layout_below="@+id/cantidad_articulo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_articulo_value"
            android:id="@+id/precio_articulo_value"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"/>
    </LinearLayout>

</RelativeLayout>